fix: make in-memory asset be sortable by createdAt (#5101)